--- a/app/views/admin/userforms/show.html.erb
+++ b/app/views/admin/userforms/show.html.erb
@@ -14,7 +14,7 @@
           <%= f.input :hint %>
           <%= f.input :default %>
           <%= f.input :placeholder %>
-          <%= f.input :field_type, collection: ['Text', 'Email',  'TextArea', 'Select', 'MultiSelect'] %>
+          <%= f.input :field_type, collection: ['Textfield', 'Emailfield',  'TextArea', 'Select', 'MultiSelect'] %>
         </div>
         <div class="form-actions text-right">
           <%= f.button :submit, class: 'btn btn-primary' %>
